Fixes
Fixed white space on bottom

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -9,13 +9,6 @@ html {
     width: 100%;
     height: 100%;
 }
-
-
-
-body{
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
 h1,
 h2,
 h3,
@@ -35,7 +28,10 @@ h6 {
     font-size: 18px;
     font-weight: 400;
 }
-
+::-webkit-scrollbar {
+    width: 0px; 
+    //background: transparent;
+}
 .intro-header {
     text-align: center;
     color: #f8f8f8;
@@ -48,9 +44,12 @@ h6 {
 }
 
 .intro-message {
+    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
     position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 26%;
+    padding-bottom: 41%;
 }
 
 .intro-message > h1 {
